Finish fabric example